--- a/index.html
+++ b/index.html
@@ -227,6 +227,8 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
 <a href="#download-static">Looking for the static release?</a>
 </p>
 
+<h5><strong>Notice: </strong>The live system password is <code>linux</code> for normal and root users.</h4>
+
 <div class="row">
     <div class="col">
       <figure>
