--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
    <div class="col">
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11913089/5b5a4722-a626-11e5-925d-cd52cb491fad.png"></a>
-        <figcaption>GeckoLinux <em>Rolling</em> </br> Plasma Stable
+        <figcaption>GeckoLinux <em>Rolling</em> </br> Plasma
 		      </br> <a href="https://susestudio.com/download/89f30ed7aa8d05611e989f17a1d64068/GeckoLinux_ROLLING_Plasma.x86_64-999.160614.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 		      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-rolling-plasma#appliance-downloads"><img src="https://cloud.githubusercontent.com/assets/2692138/15517823/7b152e8c-21bf-11e6-9ec9-2a41bd5f9cc2.png"/></a>
 	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-rolling-plasma/start_testdrive?version=999.160614.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
