--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
-
+https://groups.google.com/forum/#!topic/geckolinux-updates/KIaBjjtebWU
+<li><strong>2016-06-23 : </strong></strong>all Rolling editions 421.160621.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/KIaBjjtebWU">release notes</a>)</li>
 <li><strong>2016-06-08 : </strong></strong>all Static editions 421.160608.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/wV_igFwuJCQ">release notes</a>)</li>
 <li><strong>2016-05-27 : </strong></strong>XFCE edition 421.160605.0 (<a href="https://groups.google.com/forum/#!msg/geckolinux-updates/-sNd0eomHH0/TXX7RykABQAJ">release notes</a>)</li>
 <li><strong>2016-05-27 : </strong></strong>Plasma Stable edition 421.160601.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-stable">release notes</a>)</li>
