--- a/index.html
+++ b/index.html
@@ -59,18 +59,9 @@
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
 
+<li><strong>2016-06-27 : </strong></strong>all Static editions 421.160627.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/bcz0cgN4NL8">release notes</a>)</li>
 <li><strong>2016-06-24 : </strong></strong>all Rolling editions 421.160623.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/pUVRCESpQM8">release notes</a>)</li>
 <li><strong>2016-06-08 : </strong></strong>all Static editions 421.160608.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/wV_igFwuJCQ">release notes</a>)</li>
-<li><strong>2016-05-27 : </strong></strong>XFCE edition 421.160605.0 (<a href="https://groups.google.com/forum/#!msg/geckolinux-updates/-sNd0eomHH0/TXX7RykABQAJ">release notes</a>)</li>
-<li><strong>2016-05-27 : </strong></strong>Plasma Stable edition 421.160601.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-stable">release notes</a>)</li>
-<li><strong>2016-05-27 : </strong></strong>Plasma Stable edition 421.160527.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-stable">release notes</a>)</li>
-<li><strong>2016-05-27 : </strong></strong>XFCE edition 421.160527.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
-<li><strong>2016-05-27 : </strong></strong>Cinnamon edition 421.160527.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
-<li><strong>2016-05-27 : </strong></strong>Budgie edition 421.160527.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10">release notes</a>)</li>  
-<li><strong>2016-05-27 : </strong></strong>Gnome edition 421.160527.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-gnome">release notes</a>)</li>
-<li><strong>2016-05-27 : </strong></strong>Mate edition 421.160527.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-mate">release notes</a>)</li>
-<li><strong>2016-05-27 : </strong></strong>LXQt edition 421.160527.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-lxqt">release notes</a>)</li>
-<li><strong>2016-05-27 : </strong></strong>BareBones edition 421.160527.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-barebones">release notes</a>)</li>
 
 </ul>
 
