--- a/index.html
+++ b/index.html
@@ -307,6 +307,30 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
 </div>
 
 
+<h4><a id="download-next" class="anchor" href="#download-next" aria-hidden="true"></a></a>GeckoLinux <em>NEXT</em> editions:</h4>
+<p>
+GeckoLinux <em>NEXT</em> editions have a stable openSUSE Leap base, combined with additional OBS repositories to offer the latest version of popular desktop environments.
+<a href="#download-static">Looking for the static release?</a>
+</p>
+
+<h5><strong>Notice: </strong>The live system password is <code>linux</code> for normal and root users.</h4>
+
+<div class="row">
+
+    <div class="col">
+      <figure>
+        <img src="https://cloud.githubusercontent.com/assets/2692138/11913089/5b5a4722-a626-11e5-925d-cd52cb491fad.png"></a>
+        <figcaption>GeckoLinux Plasma <em>NEXT</em> </br>
+		      </br> <a href="https://susestudio.com/download/2a6f1fd09c58d3c55c61b8b201d6c8eb/GeckoLinux_Plasma_NEXT.x86_64-421.161013.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-next#appliance-downloads"><img src="https://cloud.githubusercontent.com/assets/2692138/15517823/7b152e8c-21bf-11e6-9ec9-2a41bd5f9cc2.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-next/start_testdrive?version=421.161013.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+        </figcaption>
+      </figure>
+    </div>
+
+</div>
+
+
 <h3><a id="who" class="anchor" href="#who" aria-hidden="true"><span class="octicon octicon-link"></span></a>Who Are You?</h3>
 
 <p>I've used Linux on the desktop since approximately 2001. I have used many versions of openSUSE since the project's inception, and I used SuSE Linux before that. I've always appreciated openSUSE's flexibility and highly innovative infrastructure, but the profusion of "paper cuts" in the default configuration always made me think twice before recommending it to others. This projects sets out to change that.</p>
