--- a/index.html
+++ b/index.html
@@ -328,6 +328,10 @@ GeckoLinux <em>NEXT</em> editions have a stable openSUSE Leap base, combined wit
       </figure>
     </div>
 
+    <div class="col"> &nbsp; </div>
+    <div class="col"> &nbsp; </div>
+    <div class="col"> &nbsp; </div>
+
 </div>
 
 
