--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
 <h4><a id="download-next" class="anchor" href="#download-next" aria-hidden="true"></a></a>GeckoLinux <em>NEXT</em> editions:</h4>
 <p>
 GeckoLinux <em>NEXT</em> editions have a stable openSUSE Leap base, combined with additional OBS repositories to offer the latest version of popular desktop environments.
-<a href="#download-static">Looking for the static release?</a>
+Looking for the <a href="#download-static"> static release?</a> or the <a href="#download-rolling"> rolling release?</a>
 </p>
 
 <h5><strong>Notice: </strong>The live system password is <code>linux</code> for normal and root users.</h4>
