--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
 
+<li><strong>2016-11-03 : </strong></strong>Plasma <em>NEXT</em> edition 421.161103.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/uE1jZPB19oA">release notes</a>)</li>	
 <li><strong>2016-06-27 : </strong></strong>all Static editions 421.160627.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/bcz0cgN4NL8">release notes</a>)</li>
 <li><strong>2016-06-24 : </strong></strong>all Rolling editions 421.160623.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/pUVRCESpQM8">release notes</a>)</li>
-<li><strong>2016-06-08 : </strong></strong>all Static editions 421.160608.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/wV_igFwuJCQ">release notes</a>)</li>
 
 </ul>
 
@@ -321,9 +321,9 @@ GeckoLinux <em>NEXT</em> editions have a stable openSUSE Leap base, combined wit
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11913089/5b5a4722-a626-11e5-925d-cd52cb491fad.png"></a>
         <figcaption>GeckoLinux Plasma <em>NEXT</em> </br>
-		      </br> <a href="https://susestudio.com/download/97a3641e67a82bd1f2597e7a0b154eef/GeckoLinux_Plasma_NEXT.x86_64-421.161030.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://susestudio.com/download/c136c662bbe8faf38f986cf8d06318e7/GeckoLinux_Plasma_NEXT.x86_64-421.161103.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 		      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-next#appliance-downloads"><img src="https://cloud.githubusercontent.com/assets/2692138/15517823/7b152e8c-21bf-11e6-9ec9-2a41bd5f9cc2.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-next/start_testdrive?version=421.161030.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-next/start_testdrive?version=421.161103.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
