--- a/index.html
+++ b/index.html
@@ -220,7 +220,9 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
 <a href="#download-static">Looking for the static release?</a>
 </p>
 
-<h5><strong>Notice: </strong>The live system password is <code>linux</code> for normal and root users.</h4>
+<h3><strong><em>2016-11-05 Notice:</em>The SuseStudio download service is experiencing difficulties at the moment. I'm trying to configure an alternate solution.</strong></h3>
+
+<h5><strong>Notice: </strong>The live system password is <code>linux</code> for normal and root users.</h5>
 
 <div class="row">
     <div class="col">
