--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@ GeckoLinux <em>Static</em> editions are based on openSUSE Leap 42.1 with its per
 <a href="#download-rolling">Looking for the rolling release?</a>
 </p>
 
+<h3><strong><em>2016-11-05 Notice: &nbsp;</em>The SuseStudio download service is experiencing difficulties at the moment. I'm trying to configure an alternate solution.</strong></h3>
+
 <h5><strong>Notice: </strong>The live system password is <code>linux</code> for normal and root users.</h4>
 
 <style>
@@ -220,7 +222,7 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
 <a href="#download-static">Looking for the static release?</a>
 </p>
 
-<h3><strong><em>2016-11-05 Notice:</em>The SuseStudio download service is experiencing difficulties at the moment. I'm trying to configure an alternate solution.</strong></h3>
+<h3><strong><em>2016-11-05 Notice: &nbsp;</em>The SuseStudio download service is experiencing difficulties at the moment. I'm trying to configure an alternate solution.</strong></h3>
 
 <h5><strong>Notice: </strong>The live system password is <code>linux</code> for normal and root users.</h5>
 
@@ -315,6 +317,8 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
 GeckoLinux <em>NEXT</em> editions have a stable openSUSE Leap base, combined with additional OBS repositories to offer the latest version of popular desktop environments.
 (Looking for the <a href="#download-static"> static release</a> or the <a href="#download-rolling"> rolling release</a>?)
 </p>
+
+<h3><strong><em>2016-11-05 Notice: &nbsp;</em>The SuseStudio download service is experiencing difficulties at the moment. I'm trying to configure an alternate solution.</strong></h3>
 
 <h5><strong>Notice: </strong>The live system password is <code>linux</code> for normal and root users.</h4>
 
