--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ GeckoLinux <em>Static</em> editions are based on openSUSE Leap 42.1 with its per
 <a href="#download-rolling">Looking for the rolling release?</a>
 </p>
 
-<span STYLE="color: red">
+<span style="color:red">
 <h3><strong><em>2016-11-05 Notice: &nbsp;</em>The SuseStudio download service is experiencing difficulties at the moment. I'm trying to configure an alternate solution.</strong></h3>
 </span>
 
@@ -302,7 +302,7 @@ GeckoLinux <em>NEXT</em> editions have a stable openSUSE Leap base, combined wit
 (Looking for the <a href="#download-static"> static release</a> or the <a href="#download-rolling"> rolling release</a>?)
 </p>
 
-<span STYLE="color: red">
+<span style="color:red">
 <h3><strong><em>2016-11-05 Notice: &nbsp;</em>The SuseStudio download service is experiencing difficulties at the moment. I'm trying to configure an alternate solution.</strong></h3>
 </span>
 
