--- a/index.html
+++ b/index.html
@@ -217,6 +217,10 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
 </p>
 
 <h5><strong>Notice: </strong>The live system password is <code>linux</code> for normal and root users.</h5>
+<h5>
+<strong>Notice: </strong>Please verify your download checksums by clicking the &nbsp; <strong><em>i</em></strong> &nbsp; icon next to your download in the 
+<a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.161031/">Sourceforge directory listing</a>.
+</h5>
 
 <div class="row">
     <div class="col">
