--- a/index.html
+++ b/index.html
@@ -216,7 +216,15 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
 <a href="#download-static">Looking for the static release?</a>
 </p>
 
-<h5><strong>Notice: </strong>The live system password is <code>linux</code> for normal and root users.</h5>
+<h5>
+	<p>
+		<strong>Notice: </strong>The live system password is <code>linux</code> for normal and root users.
+	</p>
+	<p>
+		<strong>Notice: </strong>Please verify your download checksums by clicking the &nbsp; <strong><em>i</em></strong> &nbsp; icon next to your download in the 
+		<a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.161031/">Sourceforge directory listing</a>.
+	</p>
+</h5>
 
 <div class="row">
     <div class="col">
@@ -293,14 +301,7 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
         </figcaption>
       </figure>
     </div>
-
-<h5>
-<strong>Notice: </strong>Please verify your download checksums by clicking the &nbsp; <strong><em>i</em></strong> &nbsp; icon next to your download in the 
-<a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.161031/">Sourceforge directory listing</a>.
-</h5>
-
 </div>
-
 
 <h4><a id="download-next" class="anchor" href="#download-next" aria-hidden="true"></a></a>GeckoLinux <em>NEXT</em> editions:</h4>
 <p>
