--- a/index.html
+++ b/index.html
@@ -218,11 +218,12 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
 
 <h5>
 	<p>
-		<strong>Notice: </strong>The live system password is <code>linux</code> for normal and root users.
-	</p>
-	<p>
 		<strong>Notice: </strong>Please verify your download checksums by clicking the &nbsp; <strong><em>i</em></strong> &nbsp; icon next to your download in the 
 		<a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.161031/">Sourceforge directory listing</a>.
+	</p>
+
+	<p>
+		<strong>Notice: </strong>The live system password is <code>linux</code> for normal and root users.
 	</p>
 </h5>
 
@@ -309,11 +310,16 @@ GeckoLinux <em>NEXT</em> editions have a stable openSUSE Leap base, combined wit
 (Looking for the <a href="#download-static"> static release</a> or the <a href="#download-rolling"> rolling release</a>?)
 </p>
 
-<span style="color:red">
-<h3><strong><em>2016-11-05 Notice: &nbsp;</em>The SuseStudio download service is experiencing difficulties at the moment. I'm trying to configure an alternate solution.</strong></h3>
-</span>
 
-<h5><strong>Notice: </strong>The live system password is <code>linux</code> for normal and root users.</h4>
+<h5>
+	<p>
+		<strong>Notice: </strong>Please verify your download checksums by clicking the &nbsp; <strong><em>i</em></strong> &nbsp; icon next to your download in the 
+		<a href="https://sourceforge.net/projects/geckolinux/files/NEXT/">Sourceforge directory listing</a>.
+	</p>
+	<p>
+		<strong>Notice: </strong>The live system password is <code>linux</code> for normal and root users.
+	</p>
+</h5>
 
 <div class="row">
 
@@ -321,7 +327,7 @@ GeckoLinux <em>NEXT</em> editions have a stable openSUSE Leap base, combined wit
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11913089/5b5a4722-a626-11e5-925d-cd52cb491fad.png"></a>
         <figcaption>GeckoLinux Plasma <em>NEXT</em> </br>
-		      </br> <a href="#"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/NEXT/GeckoLinux_Plasma_NEXT.x86_64-421.161103.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 	  	      </br> <a href="#"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
