--- a/index.html
+++ b/index.html
@@ -114,11 +114,15 @@ GeckoLinux <em>Static</em> editions are based on openSUSE Leap 42.1 with its per
 <a href="#download-rolling">Looking for the rolling release?</a>
 </p>
 
-<span style="color:red">
-<h3><strong><em>2016-11-05 Notice: &nbsp;</em>The SuseStudio download service is experiencing difficulties at the moment. I'm trying to configure an alternate solution.</strong></h3>
-</span>
-
-<h5><strong>Notice: </strong>The live system password is <code>linux</code> for normal and root users.</h4>
+<h5>
+	<p>
+		<strong>Notice: </strong>Please verify your download checksums by clicking the &nbsp; <strong><em>i</em></strong> &nbsp; icon next to your download in the 
+		<a href="https://sourceforge.net/projects/geckolinux/files/Static/421.160627/">Sourceforge directory listing</a>.
+	</p>
+	<p>
+		<strong>Notice: </strong>The live system password is <code>linux</code> for normal and root users.
+	</p>
+</h5>
 
 <style>
 @media(min-width:30em){.row{width:100%;display:table;table-layout:fixed}.col{display:table-cell}}
@@ -138,7 +142,7 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373681/4f073e64-92a1-11e5-8ef0-cf8b778cb5cf.jpg"></a>
         <figcaption>GeckoLinux <em>Static</em> </br> Cinnamon
-		      </br> <a href="#"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/421.160627/GeckoLinux_Cinnamon.x86_64-421.160627.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 	  	      </br> <a href="#"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
@@ -147,7 +151,7 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373686/52ad351e-92a1-11e5-88c5-5c124301b8d7.png"></a>
         <figcaption>GeckoLinux <em>Static</em> </br> XFCE
-		      </br> <a href="#"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/421.160627/GeckoLinux_XFCE.x86_64-421.160627.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 	  	      </br> <a href="#"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
@@ -156,7 +160,7 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11734338/69d405e8-9f84-11e5-9559-1b4b0f0d0d8f.png"></a>
         <figcaption>GeckoLinux <em>Static</em> </br> Gnome
-		      </br> <a href="#"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/421.160627/GeckoLinux_Gnome.x86_64-421.160627.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 	  	      </br> <a href="#"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
@@ -165,7 +169,7 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11913089/5b5a4722-a626-11e5-925d-cd52cb491fad.png"></a>
         <figcaption>GeckoLinux <em>Static</em> </br> Plasma Stable
-		      </br> <a href="#"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/421.160627/GeckoLinux_Plasma_Stable.x86_64-421.160627.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 	  	      </br> <a href="#"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
@@ -176,7 +180,7 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11911482/ab09c4d8-a5e4-11e5-96a1-5b38a8f928f5.png"></a>
         <figcaption>GeckoLinux <em>Static</em> </br> Mate
-		      </br> <a href="#"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/421.160627/GeckoLinux_Mate.x86_64-421.160627.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 	  	      </br> <a href="#"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
@@ -185,7 +189,7 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11374090/54769a2e-92a2-11e5-8237-9a2dbd91c364.png"></a>
         <figcaption>GeckoLinux <em>Static</em> </br> Budgie
-		      </br> <a href="#"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/421.160627/GeckoLinux_Budgie10.x86_64-421.160627.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 	  	      </br> <a href="#"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
@@ -194,7 +198,7 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11956434/2d5f7982-a888-11e5-9d25-5cd86a5028af.png"></a>
         <figcaption>GeckoLinux <em>Static</em> </br> LXQt
-		      </br> <a href="#"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/421.160627/GeckoLinux_LXQt.x86_64-421.160627.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 	  	      </br> <a href="#"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
@@ -203,7 +207,7 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11405426/99b1f312-9375-11e5-8fe1-f7529eb993ff.jpg"></a>
         <figcaption>GeckoLinux <em>Static</em> </br> "Barebones"
-		      </br> <a href="#"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/421.160627/GeckoLinux_BareBones.x86_64-421.160627.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 	  	      </br> <a href="#"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
