--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
 
+<li><strong>2016-12-14 : </strong></strong>all Static editions 422.161213.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/0FmVb7Nx7r4">release notes</a>)</li>
 <li><strong>2016-11-03 : </strong></strong>all Rolling editions 999.161031.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/doO4ujeV07g">release notes</a>)</li>
 <li><strong>2016-11-03 : </strong></strong>Plasma <em>NEXT</em> edition 421.161103.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/uE1jZPB19oA">release notes</a>)</li>	
 <li><strong>2016-06-27 : </strong></strong>all Static editions 421.160627.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/bcz0cgN4NL8">release notes</a>)</li>
