--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <ul>
 <li>GeckoLinux comes as an offline installable live DVD / USB image for <em>Static</em> and <em>Rolling</em> editions, whereas openSUSE has a non-live DVD / USB installer, a net-installer image, or Tumbleweed live DVD / USB with net-installer options.</li>
 <li>GeckoLinux offers customized editions optimized for different desktop environments, whereas openSUSE requires the user to know how to install patterns and packages for different desktop environments.</li>
-<li>GeckoLinux comes pre-installed with common niceties such as proprietary media codecs, whereas openSUSE for legal reasons requires users to know how to add additional repositories and which ones to add.</li>
+<li>GeckoLinux comes pre-installed with common niceties such as proprietary media codecs, whereas openSUSE for legal reasons requires users to know how to add additional repositories and which packages to add.</li>
 <li>GeckoLinux prefers packages from the Packman repo when they are available, whereas some of openSUSE's default packages don't work with patent-restricted features even if the features are installed from other sources.</li>
 <li>GeckoLinux comes pre-configured with what many would consider to be good font rendering, whereas many users find openSUSE's default font configuration to be less than desirable.</li>
 <li>GeckoLinux does not force the installation of additional recommended packages after system installation, whereas openSUSE pre-installs patterns and automatically installs recommended package dependencies, thus causing many additional and possibly unwanted packages to be installed the first time the package manager is used.</li>
