--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ GeckoLinux <em>Static</em> editions are based on openSUSE Leap 42.2 with its per
 <h5>
 	<p>
 		<strong>Notice: </strong>Please verify your download checksums by clicking the &nbsp; <strong><em>i</em></strong> &nbsp; icon next to your download in the 
-		<a href="https://sourceforge.net/projects/geckolinux/files/Static/421.160627/">Sourceforge directory listing</a>.
+		<a href="https://sourceforge.net/projects/geckolinux/files/Static/">Sourceforge directory listing</a>.
 	</p>
 	<p>
 		<strong>Notice: </strong>The live system password is <code>linux</code> for normal and root users.
@@ -209,7 +209,7 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
 <h5>
 	<p>
 		<strong>Notice: </strong>Please verify your download checksums by clicking the &nbsp; <strong><em>i</em></strong> &nbsp; icon next to your download in the 
-		<a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.161031/">Sourceforge directory listing</a>.
+		<a href="https://sourceforge.net/projects/geckolinux/files/Rolling/">Sourceforge directory listing</a>.
 	</p>
 
 	<p>
