--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
 
+<li><strong>2016-12-20 : </strong></strong>all Rolling editions 999.161218.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/dfTDYUkLIFM">release notes</a>)</li>	
 <li><strong>2016-12-14 : </strong></strong>all Static editions 422.161213.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/0FmVb7Nx7r4">release notes</a>)</li>
 <li><strong>2016-11-03 : </strong></strong>all Rolling editions 999.161031.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/doO4ujeV07g">release notes</a>)</li>
 <li><strong>2016-11-03 : </strong></strong>Plasma <em>NEXT</em> edition 421.161103.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/uE1jZPB19oA">release notes</a>)</li>	
@@ -222,8 +223,8 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373681/4f073e64-92a1-11e5-8ef0-cf8b778cb5cf.jpg"></a>
         <figcaption>GeckoLinux <em>Rolling</em> </br> Cinnamon
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.161031/GeckoLinux_ROLLING_Cinnamon.x86_64-999.161031.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-rolling-cinnamon/start_testdrive?version=999.161031.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.161218/GeckoLinux_ROLLING_Cinnamon.x86_64-999.161218.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-rolling-cinnamon/start_testdrive?version=999.161218.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
@@ -231,8 +232,8 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373686/52ad351e-92a1-11e5-88c5-5c124301b8d7.png"></a>
         <figcaption>GeckoLinux <em>Rolling</em> </br> XFCE
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.161031/GeckoLinux_ROLLING_XFCE.x86_64-999.161031.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-rolling-xfce/start_testdrive?version=999.161031.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.161218/GeckoLinux_ROLLING_XFCE.x86_64-999.161218.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-rolling-xfce/start_testdrive?version=999.161218.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
@@ -240,8 +241,8 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11734338/69d405e8-9f84-11e5-9559-1b4b0f0d0d8f.png"></a>
         <figcaption>GeckoLinux <em>Rolling</em> </br> Gnome
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.161031/GeckoLinux_ROLLING_Gnome.x86_64-999.161031.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-rolling-gnome/start_testdrive?version=999.161031.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.161218/GeckoLinux_ROLLING_Gnome.x86_64-999.161218.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-rolling-gnome/start_testdrive?version=999.161218.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
@@ -249,8 +250,8 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11913089/5b5a4722-a626-11e5-925d-cd52cb491fad.png"></a>
         <figcaption>GeckoLinux <em>Rolling</em> </br> Plasma
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.161031/GeckoLinux_ROLLING_Plasma.x86_64-999.161031.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-rolling-plasma/start_testdrive?version=999.161031.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.161218/GeckoLinux_ROLLING_Plasma.x86_64-999.161218.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-rolling-plasma/start_testdrive?version=999.161218.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
@@ -260,8 +261,8 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11911482/ab09c4d8-a5e4-11e5-96a1-5b38a8f928f5.png"></a>
         <figcaption>GeckoLinux <em>Rolling</em> </br> Mate
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.161031/GeckoLinux_ROLLING_Mate.x86_64-999.161031.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-rolling-mate/start_testdrive?version=999.161031.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.161218/GeckoLinux_ROLLING_Mate.x86_64-999.161218.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-rolling-mate/start_testdrive?version=999.161218.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
@@ -278,8 +279,8 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11956434/2d5f7982-a888-11e5-9d25-5cd86a5028af.png"></a>
         <figcaption>GeckoLinux <em>Rolling</em> </br> LXQt
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.161031/GeckoLinux_ROLLING_LXQt.x86_64-999.161031.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-rolling-lxqt/start_testdrive?version=999.161031.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.161218/GeckoLinux_ROLLING_LXQt.x86_64-999.161218.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-rolling-lxqt/start_testdrive?version=999.161218.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
@@ -287,8 +288,8 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11405426/99b1f312-9375-11e5-8fe1-f7529eb993ff.jpg"></a>
         <figcaption>GeckoLinux <em>Rolling</em> </br> "Barebones"
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.161031/GeckoLinux_ROLLING_BareBones.x86_64-999.161031.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-rolling-barebones/start_testdrive?version=999.161031.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.161218/GeckoLinux_ROLLING_BareBones.x86_64-999.161218.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-rolling-barebones/start_testdrive?version=999.161218.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
